# src/main/java/systems/fervento/sportsclub/controller/SportsFieldApiController.java
@@ -1,13 +1,18 @@
 package systems.fervento.sportsclub.controller;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import systems.fervento.sportsclub.mapper.SportsFieldApiMapper;
+import systems.fervento.sportsclub.mapper.SportsFieldReservationsSummaryApiMapper;
 import systems.fervento.sportsclub.openapi.api.SportsFieldsApi;
 import systems.fervento.sportsclub.openapi.model.SportEnum;
 import systems.fervento.sportsclub.openapi.model.SportsField;
+import systems.fervento.sportsclub.openapi.model.SportsFieldReservationsSummary;
+import systems.fervento.sportsclub.service.ReservationSummaryService;
 import systems.fervento.sportsclub.service.SportsFieldService;
 
+import java.time.ZonedDateTime;
 import java.util.List;
 
 import static java.util.stream.Collectors.toList;
@@ -16,11 +21,17 @@ import static java.util.stream.Collectors.toList;
 public class SportsFieldApiController implements SportsFieldsApi {
 
     private final SportsFieldService sportsFieldService;
-
+    private final ReservationSummaryService reservationSummaryService;
     private final SportsFieldApiMapper sportsFieldApiMapper = SportsFieldApiMapper.INSTANCE;
+    private final SportsFieldReservationsSummaryApiMapper sportsFieldReservationsSummaryApiMapper =
+        SportsFieldReservationsSummaryApiMapper.INSTANCE;
 
-    public SportsFieldApiController(SportsFieldService sportsFieldService) {
+    public SportsFieldApiController(
+        SportsFieldService sportsFieldService,
+        ReservationSummaryService reservationSummaryService
+    ) {
         this.sportsFieldService = sportsFieldService;
+        this.reservationSummaryService = reservationSummaryService;
     }
 
     @Override
@@ -45,6 +56,27 @@ public class SportsFieldApiController implements SportsFieldsApi {
             sportsFieldApiMapper.mapToSportsFieldApi(
                 sportsFieldService.getSportsFieldById(sportsFieldId)
             )
+        );
+    }
+
+    @Override
+    public ResponseEntity<SportsFieldReservationsSummary> generateSportsFieldReservationsSummary(
+        Long sportsFieldId,
+        ZonedDateTime startDate,
+        ZonedDateTime endDate,
+        String sortBy
+    ) {
+        final var generatedSportsFieldReservationsSummary = reservationSummaryService
+            .generateReservationsSummaryForSportsField(
+                sortBy,
+                startDate,
+                endDate,
+                sportsFieldId
+            );
+
+        return new ResponseEntity<>(
+            sportsFieldReservationsSummaryApiMapper.mapToSportsFieldReservationsSummary(generatedSportsFieldReservationsSummary),
+            HttpStatus.CREATED
         );
     }
 }
